--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<html><body><h1>test</h1></body></html>
+<html>
+  <script src="main.js"></script>
+  <body>
+    <div id="buttons">
+    </div>
+  </body>
+</html>
