--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
-  <script src="main.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>らいとあっぷボタン</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
   <body>
+    <h1>らいとあっぷボタン</h1>
     <div id="buttons">
     </div>
   </body>
+  <script src="main.js"></script>
 </html>
