メンバーを選択できるようにしておく

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
   </head>
   <body>
     <h1>らいとあっぷボタン</h1>
-    <div id="buttons">
+    <h2>メンバー</h2>
+    <ul id="members">
+    </ul>
+
+    <div id="member-content">
+      <h2></h2>
+      <div id="buttons">
+      </div>
     </div>
   </body>
   <script src="main.js"></script>
