音量調整など

--- a/index.html
+++ b/index.html
@@ -10,12 +10,28 @@
     <h2>メンバー</h2>
     <ul id="members">
     </ul>
-
+    
     <div id="member-content">
-      <h2></h2>
+      <h2 id="name"></h2>
+      <div>
+        <label for="volume">音量:</label>
+        <input type="range" id="volume" value="0.2" min="0.05" max="1.0" step="0.05">
+      </div>
       <div id="buttons">
       </div>
+
+      <h2>各種リンク</h2>
+      <ul id="links">
+      </ul>
+
     </div>
+    
+    <h2>免責事項</h2>
+    <p>
+      当ページは<a href="https://x.com/zaroqAp">ざろく</a>が個人的に運営しています。らいとあっぷ！運営とは何の関係もありません。<br>
+      権利等問題があれば即刻配信を停止いたしますので、Xのダイレクトメール、または<a href="https://github.com/the96">github</a>に記載のメールアドレスまでご連絡ください。<br>
+      当ページを利用したことにより生じた如何なる損害については、当方は一切の責任を負いかねますのでご了承ください。
+    </p>
   </body>
   <script src="main.js"></script>
 </html>
