--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
       </ul>
 
     </div>
+
+    <h2>ネタ募集中</h2>
+    <p>
+      ネタを提供してくださる方は <a href="https://docs.google.com/forms/d/e/1FAIpQLSe0YxEj8bPNCKNong6iPSWRkw9oX7mZVavmKTUxPuiCFN0B9w/viewform?usp=dialog">こちらのGoogle Form</a> までよろしくお願いします。
+    </p>
     
     <h2>免責事項</h2>
     <p>
