--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
       権利等問題があれば即刻配信を停止いたしますので、Xのダイレクトメール、または<a href="https://github.com/the96">github</a>に記載のメールアドレスまでご連絡ください。<br>
       当ページを利用したことにより生じた如何なる損害については、当方は一切の責任を負いかねますのでご了承ください。
     </p>
+
+    <h2>クレジット</h2>
+    <ul>
+      <li><a href="https://lightup-official.com/">らいとあっぷ！</a></li>
+      <li><a href="https://otoiro.co.jp/">© OTOIRO / DECO*27</a></li>
+    </ul>
   </body>
   <script src="main.js"></script>
 </html>
