同時再生のオンオフを追加

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <h2 id="name"></h2>
       <div>
         <label for="volume">音量:</label>
-        <input type="range" id="volume" value="0.2" min="0.05" max="1.0" step="0.05">
+        <input type="range" id="volume" value="0.2" min="0.05" max="1.0" step="0.05"><br>
+        <label for="toggle-async-play">同時再生</label>
+        <input type="checkbox" class="toggle" id="toggle-async-play" checked>
       </div>
       <div id="buttons">
       </div>
