--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h2>免責事項</h2>
     <p>
       当ページは<a href="https://x.com/zaroqAp">ざろく</a>が個人的に運営しています。らいとあっぷ！運営とは何の関係もありません。<br>
-      権利等問題があれば即刻配信を停止いたしますので、Xのダイレクトメール、または<a href="https://github.com/the96">github</a>に記載のメールアドレスまでご連絡ください。<br>
+      権利関係の問題や掲載しないでほしいボイスなどあればなるべく早く対応いたしますので、Xのダイレクトメール、または<a href="https://github.com/the96">github</a>に記載のメールアドレスまでご連絡ください。<br>
       当ページを利用したことにより生じた如何なる損害については、当方は一切の責任を負いかねますのでご了承ください。
     </p>
 
