--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     <p>
       ネタを提供してくださる方は <a href="https://docs.google.com/forms/d/e/1FAIpQLSe0YxEj8bPNCKNong6iPSWRkw9oX7mZVavmKTUxPuiCFN0B9w/viewform?usp=dialog">こちらのGoogle Form</a> までよろしくお願いします。
     </p>
-    
+
+    <h2>クラウドファンディング実施中！</h2>
+    <iframe title="" src=https://camp-fire.jp/projects/924158/widget width="245" height="365" frameborder="0" scrolling="no"></iframe>
+
     <h2>免責事項</h2>
     <p>
       当ページは<a href="https://x.com/zaroqAp">ざろく</a>が個人的に運営しています。らいとあっぷ！運営とは何の関係もありません。<br>
@@ -45,6 +48,7 @@
       <li><a href="https://lightup-official.com/">らいとあっぷ！</a></li>
       <li><a href="https://otoiro.co.jp/">© OTOIRO / DECO*27</a></li>
     </ul>
+
   </body>
   <script src="main.js"></script>
 </html>
