--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       当ページは<a href="https://x.com/zaroqAp">ざろく</a>が個人的に運営しています。らいとあっぷ！運営とは何の関係もありません。<br>
       権利関係の問題や掲載しないでほしいボイスなどあればなるべく早く対応いたしますので、Xのダイレクトメール、または<a href="https://github.com/the96">github</a>に記載のメールアドレスまでご連絡ください。<br>
       当ページを利用したことにより生じた如何なる損害については、当方は一切の責任を負いかねますのでご了承ください。
+      このページへのリンクや配信等の利用、画面録画等でのツイートなど、良識の範囲内でご自由にお楽しみください。
     </p>
 
     <h2>クレジット</h2>
